@@ -377,7 +377,11 @@ CS_MENU_TABLE_L_OSC
 
 	;;              Register (00=dummy)         |<->|  max    print ix          exec ix          parameter transfer
 	CS_MENU_ENTRY	CS_MENU_SELECTED_OSC_FLAGS, "OSC", 0x006, PRINT_VAR_123,    EXEC_SELPAR,     R2PP2R_VAR_OSC
+#if DEFAULT_ENABLE_UPPER_WAVEFORMS == 0
 	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "Wav", 0x008, PRINT_Vx_WAV,     EXEC_SELPAR,     R2PP2R_Vx_WAV
+#else
+	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "Wav", 0x00f, PRINT_Vx_WAV,     EXEC_SELPAR,     R2PP2R_Vx_WAV
+#endif
 	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "S/R", 0x003, PRINT_Vx_S_R,     EXEC_TOGPAR,     R2PP2R_Vx_S_R
 	CS_MENU_ENTRY	SID_Ix_Vx_DELAY,            "Del", 0x0ff, PRINT_Vx_DEC,     EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_Vx_AD,               "Atk", 0x00f, PRINT_Vx_DEC4U,   EXEC_SELPAR,     R2PP2R_Vx_4U
@@ -393,7 +397,7 @@ CS_MENU_TABLE_L_OSC
 	CS_MENU_ENTRY	SID_Ix_Vx_FLAGS1,	    "PMd", 0x002, PRINT_Vx_PMD,     EXEC_TOGPAR,     R2PP2R_Vx_PMD
 	CS_MENU_ENTRY	SID_Ix_Vx_FLAGS1,	    "GSA", 0x001, PRINT_Vx_GSA,     EXEC_TOGPAR,     R2PP2R_Vx_GSA
 	CS_MENU_ENTRY	SID_Ix_L_OSC_DETUNE,        "Det", 0x0ff, PRINT_DEC8,       EXEC_SELPAR,     R2PP2R_PAR8
-#if ENABLE_SWINSID
+#if DEFAULT_ENABLE_SWINSID
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_MODE,     "SwM", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_PHASE,    "SwP", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
 #endif
@@ -405,7 +409,11 @@ CS_MENU_TABLE_M_OSC
 
 	;;              Register (00=dummy)         |<->|  max    print ix          exec ix          parameter transfer
 	CS_MENU_ENTRY	CS_MENU_SELECTED_INS,       "Ins", 0x005, PRINT_VAR_DECP1,  EXEC_SELPAR,     R2PP2R_VAR
+#if DEFAULT_ENABLE_UPPER_WAVEFORMS == 0
 	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "Wav", 0x008, PRINT_Vx_WAV,     EXEC_SELPAR,     R2PP2R_Vx_WAV
+#else
+	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "Wav", 0x00f, PRINT_Vx_WAV,     EXEC_SELPAR,     R2PP2R_Vx_WAV
+#endif
 	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "S/R", 0x003, PRINT_Vx_S_R,     EXEC_TOGPAR,     R2PP2R_Vx_S_R
 	CS_MENU_ENTRY	SID_Ix_Vx_DELAY,            "Del", 0x0ff, PRINT_Vx_DEC,     EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_Vx_AD,               "Atk", 0x00f, PRINT_Vx_DEC4U,   EXEC_SELPAR,     R2PP2R_Vx_4U
@@ -419,7 +427,7 @@ CS_MENU_TABLE_M_OSC
 	CS_MENU_ENTRY	SID_Ix_M_Vx_FLAGS2,         "Phs", 0x001, PRINT_M_Vx_PHASE, EXEC_TOGPAR,     R2PP2R_M_Vx_PHASE
 	CS_MENU_ENTRY	SID_Ix_Vx_PULSEWIDTH_L,     "PW ", 0xfff, PRINT_Vx_HEX12,   EXEC_SELPAR,     R2PP2R_Vx_12
 	CS_MENU_ENTRY	SID_Ix_Vx_FLAGS1,	    "PMd", 0x002, PRINT_Vx_PMD,     EXEC_TOGPAR,     R2PP2R_Vx_PMD
-#if ENABLE_SWINSID
+#if DEFAULT_ENABLE_SWINSID
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_MODE,     "SwM", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_PHASE,    "SwP", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
 #endif
@@ -432,7 +440,11 @@ CS_MENU_TABLE_B_OSC
 
 	;;              Register (00=dummy)         |<->|  max    print ix          exec ix          parameter transfer
 	CS_MENU_ENTRY	CS_MENU_SELECTED_SID_LR,    "ACh", 0x002, PRINT_VAR_LR,     EXEC_TOGPAR,     R2PP2R_VAR_SIDLR
+#if DEFAULT_ENABLE_UPPER_WAVEFORMS == 0
 	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "Wav", 0x008, PRINT_Vx_WAV,     EXEC_SELPAR,     R2PP2R_Vx_WAV
+#else
+	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "Wav", 0x00f, PRINT_Vx_WAV,     EXEC_SELPAR,     R2PP2R_Vx_WAV
+#endif
 	CS_MENU_ENTRY	SID_Ix_Vx_WAVEFORM,         "S/R", 0x003, PRINT_Vx_S_R,     EXEC_TOGPAR,     R2PP2R_Vx_S_R
 	CS_MENU_ENTRY	SID_Ix_Vx_DELAY,            "Del", 0x0ff, PRINT_Vx_DEC,     EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_Vx_AD,               "Atk", 0x00f, PRINT_Vx_DEC4U,   EXEC_SELPAR,     R2PP2R_Vx_4U
@@ -446,7 +458,7 @@ CS_MENU_TABLE_B_OSC
 	CS_MENU_ENTRY	SID_Ix_M_Vx_FLAGS2,         "Phs", 0x001, PRINT_M_Vx_PHASE, EXEC_TOGPAR,     R2PP2R_M_Vx_PHASE
 	CS_MENU_ENTRY	SID_Ix_Vx_PULSEWIDTH_L,     "PW ", 0xfff, PRINT_Vx_HEX12,   EXEC_SELPAR,     R2PP2R_Vx_12
 	CS_MENU_ENTRY	SID_Ix_Vx_FLAGS1,	    "PMd", 0x002, PRINT_Vx_PMD,     EXEC_TOGPAR,     R2PP2R_Vx_PMD
-#if ENABLE_SWINSID
+#if DEFAULT_ENABLE_SWINSID
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_MODE,     "SwM", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_PHASE,    "SwP", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
 #endif
